fix update profile form on safari

--- a/src/public/stylesheets/layout.scss
+++ b/src/public/stylesheets/layout.scss
@@ -43,7 +43,7 @@ button.attend { margin-top: 2rem;}
 label.privacy{text-align: left}
 .settings-save{margin: 2rem auto 5rem; max-width: 500px}
 .field-body.privacy{justify-content: flex-end;}
-.field.is-horizontal{max-width: 600px; margin: 1rem auto;}
+.field.is-horizontal{max-width: 500px; margin: 1rem auto;}
 .settings .file {justify-content: center; margin-top: 1.5rem;}
 #cropModal button {margin-right: 1rem;}
 .body-content {min-height: 70vh;}
